<resources>
    <string name="app_name">The Movies App</string>
    <string name="search_hint">Search for a movie…</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="favorites">Favorites</string>
    <string name="my_lists">My Lists</string>
    <string name="charts">Charts</string>
    <string name="search">Search</string>
    <string name="title_home">Home</string>
    <string name="view_all">View All</string>
    <string name="popular_title">Popular Movies</string>
    <string name="upcoming_title">Upcoming Movies</string>
    <string name="offline_mode">OFFLINE\nM O D E</string>
    <string name="offline_mode_active">You are experiencing offline mode. Enable internet connection to go online.</string>
    <string name="user_score">Score</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="retry">Retry</string>
    <string name="known_for">Known For</string>
    <string name="known_credits">Known Movie Credits</string>
    <string name="top_credits">Top Credits</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="top_rated">Top Rated</string>
    <string name="no_charts_err">Something is amiss. Please connect to an internet connection and try again.</string>
    <string name="images">Images</string>
    <string name="watchlist">Watchlist</string>
    <string name="watched">Watched</string>
    <string name="collection">Collection</string>
    <string name="add_to_list">Add To List</string>
    <string name="ok">OK</string>
    <string name="create_new_list">Create new list</string>
    <string name="no_movies_user_list">There are no movies in this list.\nSearch movies or explore
        top charts to find movies to add here!</string>
    <string name="show_me">Show Me</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="list_name">List name…</string>
    <string name="rename">Rename</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="results_for">Results for \'%s\'</string>
    <string name="not_found">No movies found matching the query.</string>
    <string
        name="about_text"><![CDATA[This product uses the <a href="https://www.themoviedb.org">TMDb</a> API but is not endorsed or certified by TMDb.<br/>This is an open source app built by<br /><a href="http://winterparadox.com"><b>Adeel Tariq</b></a><br/>with the help of the following libraries:]]></string>
    <string name="videos">Videos</string>
</resources>
